add(gettingStarted): add architecture overview

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <script src="assets/vendor/jquery/js/jquery-1.9.1.js" language="javascript" type="text/javascript"></script>
   <script src="assets/vendor/twitter/bootstrap/js/bootstrap.js" language="javascript" type="text/javascript"></script>
+
 </head>
 <body>
   <header id="navigation" class="navbar navbar-fixed-top">
@@ -91,6 +92,16 @@
           </code>
         </p>
         <h2 id="architecture">Architecture Overview</h2>
+        <p>
+          The project will provide a client library which authenticates against the REST Api and provide PHP
+          developers with a native API for interacting with the process engine:
+        </p>
+        <img src="assets/img/php.png">
+        <p>
+          While the camunda BPM project stays focused on Java as primary programming language, we believe that it is
+          important to support developers that use other programming languages and give them access to the BPMN 2.0
+          process engine technology
+        </p>
       </section>
     </div>
   </div>
