add(gettingStarted): add api docs link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <h3 id="using">Using the sdk</h3>
         <p>
           After the inclusion of camundaRestClient.php you can instantiate the API and use it to get your requested data.
-          Below is a simple example which shows how to use the API.
+          Below is a simple example which shows how to use the API. If you want to know more about the API you can have
+          a look into the sdk's <a href="apidocs">API-Documentation</a>.
         </p>
         <h4 id="example">Example:</h4>
         <p>In this example we will request all process definitions and output the deployment id of each definition.</p>
