fix(gettingStarted): add ";" to include example

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <strong><i>camundaRestClient.php</i></strong> from main/sdk/camundaRestClient.php to your project folder and
           include it via:
         </p>
-        <code>include_once('camundaRestClient.php')</code>
+        <code>include_once('camundaRestClient.php');</code>
         <h3 id="using">Using the sdk</h3>
         <p>
           After the inclusion of camundaRestClient.php you can instantiate the API and use it to get your requested data.
