--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="well">
           <ul class="nav nav-list">
             <li><a href="#">Top</a></li>
-            <li><a href="#introduce">Introduce</a></li>
+            <li><a href="#introduce">Introduction</a></li>
             <li><a href="#gettingStarted">Getting Started</a></li>
             <li><a href="#architecture">Architecture Overview</a></li>
             <li class="divider"></li>
@@ -41,9 +41,9 @@
         </div>
       </section>
       <section class="span5">
-        <h2 id="introduce">Introduce</h2>
+        <h2 id="introduce">Introduction</h2>
         <p>
-          The <strong>Camunda BPM PHP SDK</strong> enables PHP developers to easily integrate the camunda BPM process
+          The <strong>Camunda BPM PHP SDK</strong> enables PHP developers to easily integrate the <a href="http://www.camunda.org">camunda BPM</a> process
           solutions into their projects.
         </p>
         <h2 id="gettingStarted">Getting Started</h2>
