add(gettingStarted): add documentation links

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <li class="nav-header">Example</li>
             <li><a href="#code">Code</a></li>
             <li><a href="#explanation">Explanation</a></li>
+            <li class="divider"></li>
+            <li class="nav-header">Documentation</li>
+            <li><a href="apidocs">SDK API</a></li>
+            <li><a href="http://docs.camunda.org">camunda BPM</a></li>
           </ul>
         </div>
       </section>
