add(example): add some screenshots

--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
           }
           </code>
         </p>
+        <p>
+          <i class="quote">"It is nice to see some code but what can we do with this?"</i> ... I think this is one of
+          the most essential questions about this API. Lets say we do some html magic and create an web application.
+          It could be an application like this:
+        </p>
+        <img src="assets/img/example1.PNG" />
+        <p>
+          Now as you can see we have some output but you can also do a step more and show some details :-)
+        </p>
+        <img src="assets/img/example2.PNG" />
         <h2 id="architecture">Architecture Overview</h2>
         <p>
           The project will provide a client library which authenticates against the REST Api and provide PHP
