add(example): add demo application

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li class="nav-header">Example</li>
             <li><a href="#code">Code</a></li>
             <li><a href="#explanation">Explanation</a></li>
+            <li><a href="http://hq2.camunda.com/app/security/login.php">PoC</a></li>
             <li class="divider"></li>
             <li class="nav-header">Documentation</li>
             <li><a href="apidocs">SDK API</a></li>
@@ -102,16 +103,28 @@
           It could be an application like this:
         </p>
         <img src="assets/img/example1.PNG" />
+        <br />
+        <br />
         <p>
           Now as you can see we have some output but you can also do a step more and show some details :-)
         </p>
         <img src="assets/img/example2.PNG" />
+        <br />
+        <br />
+        <p>
+          To be true - pictures a nice but why don't touch the whole:
+          <a href="http://hq2.camunda.com/app/security/login.php">Click Here</a><br />
+        </p>
+        <p class="alert alert-info">
+          <strong>Be Aware</strong> Your data will be deleted after 1 hour!
+        </p>
         <h2 id="architecture">Architecture Overview</h2>
         <p>
           The project will provide a client library which authenticates against the REST Api and provide PHP
           developers with a native API for interacting with the process engine:
         </p>
         <img src="assets/img/php.png">
+        <br />
         <p>
           While the camunda BPM project stays focused on Java as primary programming language, we believe that it is
           important to support developers that use other programming languages and give them access to the BPMN 2.0
