improve(docs): rename poc -> demo application

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="nav-header">Example</li>
             <li><a href="#code">Code</a></li>
             <li><a href="#explanation">Explanation</a></li>
-            <li><a href="http://hq2.camunda.com/app/security/login.php">Prove of Concept</a></li>
+            <li><a href="http://hq2.camunda.com/app/security/login.php">Demo Application</a></li>
             <li class="divider"></li>
             <li class="nav-header">Documentation</li>
             <li><a href="apidocs">SDK API</a></li>
