--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <div class="container-fluid container-fixed-top">
     <div class="row-fluid">
       <section class="span2">
+        <a href="https://github.com/camunda/camunda-bpm-php-sdk">
+          <img class="fork-me-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="fork me on GitHub"
+        </a>
         <div class="well">
           <ul class="nav nav-list">
             <li><a href="#">Top</a></li>
