--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="nav-header">Example</li>
             <li><a href="#code">Code</a></li>
             <li><a href="#explanation">Explanation</a></li>
-            <li><a href="http://hq2.camunda.com/app/security/login.php">Demo Application (offline)</a></li>
+            <li><a href="http://hq2.camunda.com/app/security/login.php">Demo Application</a></li>
             <li class="divider"></li>
             <li class="nav-header">Documentation</li>
             <li><a href="apidocs">SDK API</a></li>
@@ -121,7 +121,7 @@
         <br />
         <p>
           To be true - pictures a nice but why don't touch the whole:
-          <a href="http://hq2.camunda.com/app/security/login.php">Click Here (currently offline)</a><br />
+          <a href="http://hq2.camunda.com/app/security/login.php">Click Here</a><br />
         </p>
         <p class="alert alert-info">
           <strong>Be Aware</strong> Your data will be deleted after 1 hour!
